# tara

./: .gitignore  main.py  pyproject.toml
asr/: transcribe.py
infra/: .terraform.lock.hcl  bootstrap.sh.tftpl  gpu.tfvars.example  main.tf  variables.tf
infra/scripts/: _refresh-creds.ps1  apply.ps1  check-bootstrap.ps1  destroy.ps1  plan.ps1  ssh.ps1  start.ps1  stop.ps1
pipeline/: app.py
scripts/: run-remote.ps1  serve.ps1  sync.ps1
server/: app.py
server/static/: index.html
translation/: translate.py
tts/: synthesize.py
