[project]
name = "tara"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.16.4",
    "openai-whisper>=20230306",
    "piper-tts>=1.2.0",
    "transformers>=4.30.0",
    "sentencepiece>=0.1.99",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-multipart>=0.0.9",
]
